<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginFragment"
            type="com.outlook.alessandroardu.shoestore.screens.login.LoginFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/screen_margin">

        <TextView
            android:id="@+id/login_title_textView"
            style="@style/title_style"
            android:text="@string/login_title_text"
            app:layout_constraintBottom_toTopOf="@+id/login_email_textEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.75" />

        <EditText
            android:id="@+id/login_email_textEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_margin"
            android:layout_marginEnd="@dimen/screen_margin"
            android:ems="10"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/login_password_textEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_title_textView" />

        <EditText
            android:id="@+id/login_password_textEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_margin"
            android:layout_marginEnd="@dimen/screen_margin"
            android:ems="10"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/login_signin_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_email_textEdit" />

        <Button
            android:id="@+id/login_register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_margin"
            android:layout_marginEnd="@dimen/screen_margin"
            android:text="@string/login_register_button_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/login_signin_button"
            app:layout_constraintEnd_toStartOf="@+id/login_signin_button"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/login_signin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_margin"
            android:layout_marginEnd="@dimen/screen_margin"
            android:text="@string/login_button_signin_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/login_register_button"
            app:layout_constraintTop_toBottomOf="@+id/login_password_textEdit" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>